[workspace]
resolver = "3"
members = ["game_network", "game_logic", "rust"]


[workspace.dependencies]
godot = {git = "https://github.com/godot-rust/gdext.git", rev = "869a336fb981f4c676a0ccb6a9422fad95a4138e", features = ["api-4-6", "experimental-threads"]}
bytes = "1.11.1"
iroh = "0.96.0"
rand = "0.9.2"
tokio = { version = "1.50", features = ["full", "tracing"] }
async-channel = "2.5.0"
rkyv = "0.8.15"
hecs = "0.11"
console-subscriber = "0.5"
