[package]
name = "rust"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
godot.workspace = true
tokio.workspace = true
async-channel.workspace = true
game_network = { path = "../game_network" }
game_logic = { path = "../game_logic" }
hecs.workspace = true
[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.
